--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - 5000:5000
     volumes:
      - .:/app
-     - /app/node_modules
+     - app_modules:/app/node_modules
     command: yarn start:dev
     depends_on:
       - db
@@ -30,7 +30,44 @@ services:
       - db_data:/var/lib/postgresql/data
     restart: unless-stopped
 
+  minio:
+    image: minio/minio:latest
+    env_file:
+      .env
+    command: server --console-address ":9001" /data/
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - minio-storage:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    restart: unless-stopped
+
+  # file_db:
+  #   image: mongo:latest
+  #   env_file:
+  #     .env
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+  #     MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+  #   ports:
+  #     - 27017:27017
+  #   volumes:
+  #     - file-storage:/data/db
+  #   restart: unless-stopped
+
+
 volumes:
   db_data:
+  minio-storage:
+  app_modules:
   
   
