--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,14 @@ services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
       - 5000:5000
     volumes:
      - .:/app
+     - node_modules:/app/node_modules
     command: yarn start:dev
     depends_on:
       - db
@@ -75,5 +77,6 @@ volumes:
   minio-storage:
   mongodb_data_container:
   cache:
+  node_modules:
   
   
